--- a/database.yml
+++ b/database.yml
@@ -1,9 +1,9 @@
 development:
   dialect: postgres
-  database: myapp_development
+  database: byte_books
   user: postgres
-  password: postgres
-  host: 127.0.0.1
+  password: huw8wstzr
+  host: localhost
   pool: 5
 
 test:
