added login and logout handlers using sessions

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = "host=localhost port=5432 dbname=byte_books user=postgres password=huw8wstzr"
+SESSION_KEY = "super secret session key"
