fixed some issues and added login with google

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL = "host=localhost port=5432 dbname=byte_books user=postgres password=huw8wstzr"
 SESSION_KEY = "super secret session key"
+GOOGLE_CLIENT_ID = 638897692428-46l017p00pqkonoj9s5tqkfef06s4js2.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
