--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,10 @@ services:
   postgres:
     image: postgres:alpine
     environment:
-      - DATABASE_URL=${DATABASE_URL}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
+
     ports:
       - "5432:5432" 
     volumes:
