--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,14 +18,11 @@ services:
       - "8000:8000" 
     volumes:
       - ./backend:/app
-    command: go run backend/cmd/*.go
 
   postgres:
     image: postgres:alpine
-    environment:
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_DB=${POSTGRES_DB}
+    env_file:
+      - .env
 
     ports:
       - "5432:5432" 
