--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       - '3000:3000'
     volumes:
       - ./byte-books-frontend/src:/app/src
-    stdin_open: true
-    tty: true
+    # stdin_open: true
+    # tty: true
 
   backend:
     build: ./backend
     env_file:
-      - .env
+      - ./backend/.env
     ports:
       - "8000:8000" 
     volumes:
@@ -22,7 +22,7 @@ services:
   postgres:
     image: postgres:alpine
     env_file:
-      - .env
+      - ./backend/.env
 
     ports:
       - "5432:5432" 
